# the_mainest

./: CMakeLists.txt  README.md  package.xml
important_files/: ur_macro.xacro
launch/: born_gazebo.launch  born_robot.launch  toborn.launch
msg/: Markers.msg
src/: the_mainest_node.py
srv/: AttachObj.srv  GetPNPPoses.srv  Give.srv  GoalPoses.srv  JSPosition.srv  ObbArr.srv
ur_docker/docker/: Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
